TNT setting up